Replace HttpURLConnection with java.net.http.HttpClient for artifact downloads
- HttpPullTransferProtocol: replace URL/HttpURLConnection/AtomicReference with
  java.net.http.HttpClient; prefer HTTP/2 (ALPN), fall back to HTTP/1.1 for plain HTTP
- HttpPushTransferProtocol: same replacement in pushArtifactToConsumer()
- Shared static HttpClient instance is thread-safe and reused across all transfers
- Fixed 30-min REQUEST_TIMEOUT_MS replaces dynamic computeReadTimeout() which could
  not be applied after HttpClient.send() is called
- Response InputStream closed via closeQuietly() in whenComplete handler on all paths
- Added coverage tests: non-200 response returns failure for both protocols
- Removed unused computeReadTimeout() and MIN_TRANSFER_SPEED_BYTES_PER_SEC from both files
- Updated doc/data-plane-signaling-technical.md: separate OkHttpClient (mgmt) vs
  java.net.http.HttpClient (artifact downloads) sections

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>